Pull up following revision(s) (requested by christos in ticket #853): 	sys/netinet6/udp6_output.c: revision 1.44 PR/47408: Anthony Mallet: sendto(2) issue with IPv6 UDP datagrams - don't connect when the local port is 0, just set the local port number. - remove redundant assignment XXX: pullup-6